# laserdove

./: .coveragerc  .gitignore  AGENTS.md  Makefile  README-old.md  README.md  config.py  example-config.toml  geometry.py  hardware.py  logging_utils.py  model.py  novadovetail.py  planner.py  prompt-init.txt  pyproject.toml  pytest.ini  requirements.txt  setup.sh  simulation_viewer.py  validation.py
hardware/: __init__.py  base.py  rotary.py  ruida.py  sim.py
reference/: 23HS45-4204D-E1000_Full_Datasheet.md  CL57T_V4.0.md  CL57T_V4.0.txt  Diskussion_Nova 35 – FabLab Region Nürnberg.html  Manual-for-RDC6442G.md  Network aware laser cutter security – Roger Clark.html  RDC6442GU-DFM-RD-Control-System-V1.3-Manual.md  RDV6442G-Control-System-manual-V1.3.md  Reverse Engineering of Laser Cutter Controller RDLxxx and RDCAM Software-linux.html  Reverse Engineering of Laser Cutter Controller RDLxxx and RDCAM Software-messages.html  Reverse Engineering of Laser Cutter Controller RDLxxx and RDCAM Software.html  Ruida - EduTech Wiki.html  Ruida RDC6442S_G _ Best Co2 Laser Controller.html  calibration-file.rd  index.html  laser-nova35-rdworks.md  nova_plus_series_unified_user's_manual.md  rdcam.py  rpa_protocol.py  ruida_parser.py  stepper-details.txt  z-offset-layers.rd
tests/: conftest.py  test_base.py  test_config.py  test_geometry.py  test_hardware.py  test_logging_utils.py  test_main.py  test_novadovetail.py  test_panda3d_simulator.py  test_planner.py  test_rd_builder.py  test_rotary_driver.py  test_rotary_driver_gpio.py  test_ruida.py  test_ruida_extra.py  test_ruida_laser.py  (+14 more)
(+31 files in other folders)
