[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laserdove"
version = "0.0.0"
description = "Dovetail joint planner"
requires-python = ">=3.11"
dependencies = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "tomli>=2.0.1; python_version < '3.11'",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
